fixed glitch in journal and details

--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
   <!-- Details Tab -->
   <div class="tab-content tab-details">
     <h2>Details</h2>
-<fieldset class="repeating_armor">
+<fieldset class="repeating_details">
   <div class="gold-border">
     <label>Question:
       <input type="text" name="attr_details_question" />
@@ -696,7 +696,7 @@
   <!-- Journal Tab -->
   <div class="tab-content tab-journal">
     <h2>Journal</h2>
-<fieldset class="repeating_armor">
+<fieldset class="repeating_journal">
   <div class="gold-border">
     <label>Title:
       <input type="text" name="attr_journal_title" />
